@@ -16,8 +16,6 @@
 
 package org.springframework.boot.autoconfigure.web.reactive;
 
-import java.util.stream.Collectors;
-
 import io.undertow.Undertow;
 import org.eclipse.jetty.servlet.ServletHolder;
 import reactor.netty.http.server.HttpServer;
@@ -68,7 +66,7 @@ abstract class ReactiveWebServerFactoryConfiguration {
 			NettyReactiveWebServerFactory serverFactory = new NettyReactiveWebServerFactory();
 			serverFactory.setResourceFactory(resourceFactory);
 			routes.orderedStream().forEach(serverFactory::addRouteProviders);
-			serverFactory.getServerCustomizers().addAll(serverCustomizers.orderedStream().collect(Collectors.toList()));
+			serverFactory.getServerCustomizers().addAll(serverCustomizers.orderedStream().toList());
 			return serverFactory;
 		}
 
@@ -85,12 +83,9 @@ abstract class ReactiveWebServerFactoryConfiguration {
 				ObjectProvider<TomcatContextCustomizer> contextCustomizers,
 				ObjectProvider<TomcatProtocolHandlerCustomizer<?>> protocolHandlerCustomizers) {
 			TomcatReactiveWebServerFactory factory = new TomcatReactiveWebServerFactory();
-			factory.getTomcatConnectorCustomizers()
-				.addAll(connectorCustomizers.orderedStream().collect(Collectors.toList()));
-			factory.getTomcatContextCustomizers()
-				.addAll(contextCustomizers.orderedStream().collect(Collectors.toList()));
-			factory.getTomcatProtocolHandlerCustomizers()
-				.addAll(protocolHandlerCustomizers.orderedStream().collect(Collectors.toList()));
+			factory.getTomcatConnectorCustomizers().addAll(connectorCustomizers.orderedStream().toList());
+			factory.getTomcatContextCustomizers().addAll(contextCustomizers.orderedStream().toList());
+			factory.getTomcatProtocolHandlerCustomizers().addAll(protocolHandlerCustomizers.orderedStream().toList());
 			return factory;
 		}
 
@@ -111,7 +106,7 @@ abstract class ReactiveWebServerFactoryConfiguration {
 		JettyReactiveWebServerFactory jettyReactiveWebServerFactory(JettyResourceFactory resourceFactory,
 				ObjectProvider<JettyServerCustomizer> serverCustomizers) {
 			JettyReactiveWebServerFactory serverFactory = new JettyReactiveWebServerFactory();
-			serverFactory.getServerCustomizers().addAll(serverCustomizers.orderedStream().collect(Collectors.toList()));
+			serverFactory.getServerCustomizers().addAll(serverCustomizers.orderedStream().toList());
 			serverFactory.setResourceFactory(resourceFactory);
 			return serverFactory;
 		}
@@ -127,7 +122,7 @@ abstract class ReactiveWebServerFactoryConfiguration {
 		UndertowReactiveWebServerFactory undertowReactiveWebServerFactory(
 				ObjectProvider<UndertowBuilderCustomizer> builderCustomizers) {
 			UndertowReactiveWebServerFactory factory = new UndertowReactiveWebServerFactory();
-			factory.getBuilderCustomizers().addAll(builderCustomizers.orderedStream().collect(Collectors.toList()));
+			factory.getBuilderCustomizers().addAll(builderCustomizers.orderedStream().toList());
 			return factory;
 		}
 
